--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
+    "dev": "nodemon --exec electron . --watch main.js --watch preload.js --watch index.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
