--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "dev": "nodemon --exec electron . --watch main.js --watch preload.js --watch index.html",
+    "dev": "nodemon --exec electron . ",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
