react configuration successfully

--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "start": "electron .",
-    "dev": "nodemon --exec electron . ",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "react-build": "cd app && npm run build",  
+    "start": "npm run react-build && electron .",  
+    "dev": "nodemon --exec electron .  ",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "react-start": "cd app && npm start" 
   },
   "keywords": [],
   "author": "",
