--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "electron": "^32.0.2",
-    "react-router-dom": "^6.26.2"
+    "electron": "^32.0.2"
+    
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
